@@ -79,10 +79,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+      				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+   				</configuration>
 			</plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+      				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+   				</configuration>
 			</plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
